[tool.poetry]
name = "billit"
version = "0.2.0"
description = "Python SDK for https://billit.io"
authors = ["Paris Kasidiaris <paris@withlogic.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
