[tool.poetry]
name = "billit"
version = "0.3.0"
description = "Python SDK for https://billit.io"
authors = ["Paris Kasidiaris <paris@withlogic.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
types-requests = "^2.28.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
